Fix: grid layout on mobile view
Removed window resize event listener and added ResizeObserver for better mobile experience.

--- a/src/sass/layout/_app.scss
+++ b/src/sass/layout/_app.scss
@@ -3,6 +3,7 @@
 body {
     width: 100%;
     height: 100vh;
+    background-color: $c-chaos-black;
 }
 
 .app {
